# Yami

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.rst  index.html  noxfile.py  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  continuous-integration.yml  pypi-publish.yml  release.yml
0.3.0/: checks-guide.html  getting-started-guide.html  index.html  message-commands-guide.html  modules-guide.html  search.html
0.3.1/: checks-guide.html  getting-started-guide.html  message-commands-guide.html  modules-guide.html  reference.html  search.html
0.3.1/_sources/: modules-guide.rst.txt
0.4.0/: checks-guide.html  genindex.html  reference.html  search.html
0.4.0/_sources/: index.rst.txt
0.4.1/: checks-guide.html  genindex.html  getting-started-guide.html  index.html  py-modindex.html  search.html
0.4.1/_sources/: getting-started-guide.rst.txt
docs/source/: checks.rst  conf.py  getting-started-guide.rst  getting-started.rst  index.rst  message-commands.rst  modules.rst  reference.rst  yami-modules.rst
docs/source/_static/css/: styles.css
master/: .buildinfo  checks-guide.html  checks.html  genindex.html  getting-started-guide.html  getting-started.html  index.html  message-commands-guide.html  message-commands.html  modules-guide.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
master/.doctrees/: checks-guide.doctree  checks.doctree  environment.pickle  getting-started-guide.doctree  getting-started.doctree  index.doctree  message-commands-guide.doctree  message-commands.doctree  modules-guide.doctree  reference.doctree
master/_sources/: getting-started.rst.txt  index.rst.txt  message-commands.rst.txt  reference.rst.txt
master/_static/: documentation_options.js
master/_static/css/: styles.css
scripts/: docs-deploy.sh  post-release.sh  pre-release.sh  update-sha.sh  version-check.sh
tests/: __init__.py  test_bot.py  test_commands.py  test_context.py  test_general.py  test_yami.py  test_yami_bot.py
yami/: __init__.py  __main__.py  _cli.py  args.py  bot.py  checks.py  commands.py  context.py  converters.py  errors.py  events.py  exceptions.py  modules.py
yami/utils/: __init__.py  this.py  types.py
