[tool.poetry]
name = "Yami"
version = "0.3.0"
description = "A command handler that complements Hikari."
license = "GPL-3.0-only"
homepage = "https://github.com/Jonxslays/Yami"
repository = "https://github.com/Jonxslays/Yami"
authors = ["Jonxslays"]
readme = "README.md"
packages = [
    { include = "yami" },
    { include = "yami/py.typed" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    # "Programming Language :: Python :: 3.11", # Blocked by hikari
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.scripts]
yami = "yami._cli:info"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
hikari = ">=2.0.0.dev104"

[tool.poetry.dev-dependencies]
pytest = "~=6.2"
black = "~=21.12b0"
flake8 = "~=4.0.1"
isort = "~=5.10.1"
nox = "~=2021.10.1"
pyright = "~=0.0.13"
pytest-asyncio = "~=0.16.0"
mypy = "~=0.920"
toml = "~=0.10.2"
len8 = "~=0.6.0"
mock = "~=4.0.3"
types-mock = "~=4.0.4"
coverage = "~=6.2"
pytest-testdox = "~=3.0.0"
sphinx = "~=4.3.2"
karma_sphinx_theme = "~=0.0.8"

[tool.black]
line-length = 99
extend-exclude = "this.py|docs"

[tool.isort]
profile = "black"

[tool.len8]
include = ["yami", "tests", "noxfile.py"]
exclude = ["docs"]
code-length = 99
docs-length = 72
strict = true

[tool.mypy]
strict = true
warn_unused_ignores = false

[tool.pyright]
include = ["yami"]
ignore = ["tests"]
typeCheckingMode = "strict"
reportImportCycles = false
reportPrivateUsage = "information"
reportUnnecessaryIsInstance = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
