[tool.poetry]
name = "Yami"
version = "0.4.1"
description = "A command handler that complements Hikari."
license = "GPL-3.0-or-later"
homepage = "https://github.com/Jonxslays/Yami"
repository = "https://github.com/Jonxslays/Yami"
documentation = "https://jonxslays.github.io/Yami"
authors = ["Jonxslays"]
readme = "README.md"
packages = [
    { include = "yami" },
    { include = "yami/py.typed" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    # "Programming Language :: Python :: 3.11", # Blocked by hikari
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.scripts]
yami = "yami._cli:info"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
hikari = "==2.0.0.dev108"
aiodns = { version = "~=3.0", optional = true }
cchardet = { version = "~=2.1", optional = true }
brotli = { version = "~=1.0", optional = true }
ciso8601 = { version = "~=2.2", optional = true }

[tool.poetry.extras]
speedups = ["aiodns", "cchardet", "brotli", "ciso8601"]

[tool.poetry.dev-dependencies]
pytest = "==7.1.2"
black = "==22.3.0"
flake8 = "==4.0.1"
isort = "==5.10.1"
nox = "==2022.1.7"
pyright = "==1.1.244"
pytest-asyncio = "==0.18.3"
mypy = "==0.950"
toml = "==0.10.2"
len8 = "==0.7.3.post0"
mock = "==4.0.3"
types-mock = "==4.0.13"
coverage = "==6.3.2"
pytest-testdox = "==3.0.1"
sphinx = "==4.5.0"
sphinx-rtd-theme = "==1.0.0"
sphinx-rtd-dark-mode = "==1.2.4"

[tool.black]
line-length = 99
extend-exclude = "this.py|docs"

[tool.isort]
profile = "black"

[tool.len8]
include = ["yami", "tests", "noxfile.py"]
exclude = ["docs"]
code-length = 99
docs-length = 72
strict = true

[tool.mypy]
strict = true
warn_unused_ignores = false

[tool.pyright]
include = ["yami"]
ignore = ["tests"]
typeCheckingMode = "strict"
reportImportCycles = false
reportPrivateUsage = "information"
reportUnnecessaryIsInstance = false

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
